[gd_scene load_steps=5 format=3 uid="uid://38wbxmuh3u1t"]

[ext_resource type="Script" path="res://scripts/level_goal.gd" id="1_ru8nr"]
[ext_resource type="Texture2D" uid="uid://bc42yc6ebu2wr" path="res://assets/sprites/flag.png" id="2_um7j1"]
[ext_resource type="AudioStream" uid="uid://c0ct5uts7p2cq" path="res://assets/sounds/level-win.mp3" id="3_sqg6f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xuvfi"]
size = Vector2(16, 16)

[node name="Level Goal" type="Area2D"]
collision_mask = 2
script = ExtResource("1_ru8nr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_xuvfi")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_um7j1")

[node name="PassLevelSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_sqg6f")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
